Fix emoji alignment

--- a/_sass/custom/custom.scss
+++ b/_sass/custom/custom.scss
@@ -94,3 +94,8 @@ a:hover {
   padding-top: 1rem;
   margin-top: 1rem;
 }
+
+.emoji {
+  position: relative;
+  top: 0.2rem;
+}
